<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/bg_welcome"
              android:orientation="vertical">

    <include layout="@layout/layout_head"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingBottom="30dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_second_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/settings_network"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="30sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@mipmap/setting_activity_divider"/>

                <LinearLayout
                    android:id="@+id/setting_server_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_setting_item"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2.5"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/settings_network_ip"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/server_ip_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2.5"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="24sp"
                        android:textStyle="italic"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setting_server_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_setting_item"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2.5"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/settings_network_port"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/server_port_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2.5"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="24sp"
                        android:textStyle="italic"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setting_network"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_setting_item"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:visibility="visible">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2.5"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/settings_local_network"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/local_ip_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2.5"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="24sp"
                        android:textStyle="italic"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setting_mac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_setting_item"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:visibility="visible">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2.5"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/settings_local_mac"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/local_mac_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2.5"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="24sp"
                        android:textStyle="italic"/>
                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/settings_other"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="30sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@mipmap/setting_activity_divider"/>

                <LinearLayout
                    android:id="@+id/setting_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_setting_item"
                    android:focusable="true"
                    android:padding="15dp"
                    android:layout_marginTop="10dp"
                    android:visibility="visible">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="5"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/main_menu_app"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="24sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setting_system"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_setting_item"
                    android:focusable="true"
                    android:padding="15dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="5"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/settings_system"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>